--- a/Downloads/social_media_trending_app/Dockerfile
+++ b/Downloads/social_media_trending_app/Dockerfile
@@ -23,5 +23,5 @@ RUN apk del .build-deps
 # Expose the port the app runs on
 EXPOSE 8000
 
-# Define the command to run the application
-CMD ["gunicorn", "app:app", "--bind", "0.0.0.0:8000"]
+# Define the command to run the application, using $PORT provided by Render
+CMD ["sh", "-c", "gunicorn app:app --bind 0.0.0.0:${PORT:-8000}"]
