--- a/Downloads/social_media_trending_app/render.yaml
+++ b/Downloads/social_media_trending_app/render.yaml
@@ -1,8 +1,10 @@
 services:
   - type: web
     name: ai-social-media-content-tool
-    runtime: docker
+    runtime: python
     plan: free
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: FLASK_ENV
         value: production
