--- a/Downloads/social_media_trending_app/render.yaml
+++ b/Downloads/social_media_trending_app/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: ai-social-media-content-tool
+    name: ai-social-media-content
     runtime: python
     plan: free
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
