--- a/Downloads/social_media_trending_app/render.yaml
+++ b/Downloads/social_media_trending_app/render.yaml
@@ -3,7 +3,7 @@ services:
     name: ai-social-media-content
     runtime: python
     plan: free
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements_app.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     repo: https://github.com/Karehmaciu/social_media_app.git
     branch: main
