--- a/Downloads/social_media_trending_app/render.yaml
+++ b/Downloads/social_media_trending_app/render.yaml
@@ -8,6 +8,7 @@ services:
     repo: https://github.com/Karehmaciu/social_media_app.git
     branch: main
     rootDir: .
+    healthCheckPath: /healthz
     envVars:
       - key: FLASK_ENV
         value: production
