--- a/Downloads/social_media_trending_app/render.yaml
+++ b/Downloads/social_media_trending_app/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: python
     plan: free
     rootDir: .
-    buildCommand: poetry export --format=requirements.txt --output=requirements.txt --without-hashes && pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: && pip install --upgrade pip && pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     healthCheckPath: /healthz
     repo: https://github.com/Karehmaciu/social_media_trending_app.git
