--- a/Downloads/social_media_trending_app/render.yaml
+++ b/Downloads/social_media_trending_app/render.yaml
@@ -1,1 +1,21 @@
 
+services:
+  - type: web
+    name: ai-social-media-content
+    runtime: python
+    plan: free
+    rootDir: .
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
+    healthCheckPath: /healthz
+    repo: https://github.com/Karehmaciu/social_media_trending_app.git
+    branch: main
+    envVars:
+      - key: FLASK_ENV
+        value: production
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: SERP_API_KEY
+        sync: false
+      - key: TINYMCE_API_KEY
+        sync: false
